--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blanco y Negro</title>
+    <!-- enlace a estilos -->
+    <link rel='stylesheet' href='http://localhost:8080/estilos' />
 </head>
+
 <body>
-    
+    <h2>BLACK & WHITE SPA</h2>
+    <div class="container">
+        <!-- agrego url -->
+        <form action='http://localhost:8080/imagen'>
+            <p>URL imagen:</p>
+            <input type="text" id="" name="ruta" class="txtInput">
+            <br />
+            <br />
+            <button class="btn-outline-danger">Cargar imagen al Servidor</button>
+        </form>
+    </div>
 </body>
+
 </html>
