--- a/index.html
+++ b/index.html
@@ -9,20 +9,33 @@
     <!-- enlace a estilos -->
     <link rel='stylesheet' href='http://localhost:8080/estilos' />
 
+    <!-- fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+   <!-- fonts -->
+
     </head>
 
 <body>
-    <h2>BLACK & WHITE SPA</h2>
-    <div class="container">
+   <h2 class="titulo">BLACK & WHITE SPA: </h2>
+ <div class="container">
+
+
+   
+        
         <!-- agrego url -->
         <form action='http://localhost:8080/imagen'>
-            <p>URL imagen:</p>
-            <input type="text" id="" name="ruta" class="txtInput">
+            <h3>La URL de tu imagen va aqui:</h3>
+            <input type="text" id="" name="rutaImagen" class="txtInput">
             <br />
             <br />
             <button class="btn-outline-danger">Cargar imagen al Servidor</button>
         </form>
+
+
     </div>
+    
 
 </body>
 </html>
